fix:form-text-colors, fix:overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,8 @@
 
     --warning: 35, 99%, 59%;
     --warning-hover: 42, 94%, 68%;
+
+    --form-text: 0, 0%, 13%;
   }
   .dark {
     --background: 0, 1%, 18%;
@@ -46,6 +48,8 @@
 
     --warning: 35, 99%, 59%;
     --warning-hover: 42, 94%, 68%;
+
+    --form-text: 0, 0%, 13%;
   }
 }
 
